--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
   "functions": {
     "api/index.py": {
       "runtime": "python3.11",
+      "buildCommand": "pip install -r requirements.txt",
       "maxDuration": 60
     }
   },
